<resources>
    <string name="app_name">GreenFood</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_enter_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nif">Nif</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_address">Address</string>
    <string name="action_register">Register</string>
    <string name="action_enterprise">Register as enterprise</string>
    <string name="action_login">Login</string>
    <string name="action_return">Return</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="question_login">Already have an account?</string>
    <string name="question_return">Do you want to go back?</string>
    <string name="title_activity_enterprise_register">Registration</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="restaurant">Are you a restaurant?</string>
    <string name="search">Search</string>
    <string name="type_the_name">Type the name...</string>
    <string name="search_for_dishes">Search for Dishes</string>
    <string-array name="Diets">
        <item>All</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
</resources>
